# 3d-renderer-practice

./: .gitignore  CMakeLists.txt  color.cpp  color.h  defs.h  geometry.cpp  geometry.h  geometry.tpp  main.cpp  objects.cpp  objects.h  render.cpp  render.h  run_build.sh
a.out.dSYM/Contents/Resources/DWARF/: a.out
include/: color.h  const.h  directions.h  geometry.h  geometry.tpp  objects.h  render.h  viewer.h
opencv-viewer/: compile.sh  viewer.cpp  viewer.h
src/: color.cpp  directions.cpp  geometry.cpp  main.cpp  objects.cpp  render.cpp  viewer.cpp
